re PR tree-optimization/43783 (-O -ftree-pre options compile libbid wrong)

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43783
	* tree-ssa-pre.c (create_component_ref_by_pieces_1): Drop
	constant ARRAY_REF operands two and three if possible.

	* gcc.c-torture/execute/pr43783.c: New testcase.

From-SVN: r158549